# backend

./: .gitignore  Dockerfile  README.md  docker-compose-mysql.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
etc/nginx/: nginx.conf
migrations/models/: 0_20241115200402_init.py  0_20241117020357_init.py  1_20241115200550_update.py  1_20241118163818_update.py  2_20241115200817_update.py  3_20241115201631_update.py
src/: main.py  pyproject.toml  start_gunicorn.sh
src/app/banner/: router.py
src/app/banner/dtos/: request.py  response.py
src/app/banner/models/: banner.py
src/app/banner/services/: banner_service.py
src/app/best_production/: router.py
src/app/best_production/models/: best_production.py
src/app/cart/: router.py
src/app/cart/dtos/: cart_request.py  cart_response.py
src/app/cart/models/: cart.py
src/app/cart/services/: cart_services.py
src/app/category/: router.py
src/app/category/dtos/: category_request.py  category_response.py
src/app/category/models/: category.py
src/app/category/services/: category_services.py
src/app/mds_choice/: router.py
src/app/mds_choice/models/: mds_choice.py
src/app/order/: router.py  router_payment.py
src/app/order/dtos/: order_request.py  order_response.py  payment_request.py  payment_response.py
src/app/order/models/: order.py  payment.py
src/app/order/services/: order_services.py  payment_service.py
src/app/payment/: router.py
src/app/payment/dtos/: payment_request.py  payment_response.py
src/app/payment/models/: non_user.py  payment.py
src/app/payment/services/: payment_config.py  (+4 more)
src/app/product/: router.py
src/app/promotion_product/: router.py
src/app/user/: router.py  router_auth.py  router_oauth.py
src/common/: post_construct.py
src/common/constants/: auth_constants.py  reset_email_message.py
src/common/exceptions/: custom_exceptions.py  error_code.py  payment_exception.py
src/common/github_webhook/: github_webhook.py
src/common/handlers/: exception_handler.py  middleware_handler.py  router_handler.py
src/common/middlewares/: access_token_middleware.py  custom_response_middleware.py
src/common/models/: base_model.py
src/common/utils/: logger.py  ncp_s3_client.py  object_storage.py  pagination_and_sorting_dto.py
src/common/webhooks/: github_webhook.py  utils.py
src/core/configs/: __init__.py  settings.py
src/core/database/: db_settings.py
src/tests/: fixtures.py  utils.py
src/tests/banner/: test_banner_model.py  test_banner_router.py  test_banner_service.py
src/tests/cart/: test_cart_model.py  test_cart_router.py  test_cart_service.py
src/tests/category/: test_category_models.py  test_category_router.py  test_category_services.py
src/tests/order/: test_order_models.py  test_order_router.py  test_order_services.py
src/tests/product/: test_product_model.py  test_product_router.py  test_product_service.py
src/tests/promotion_product/: test_promotion_product_model.py  test_promotion_product_router.py  test_promotion_product_service.py
src/tests/user/: test_user_oauth_router.py  test_user_router.py
(+21 files in other folders)
